Change time format, fix table on mobile

--- a/src/scss/_table.scss
+++ b/src/scss/_table.scss
@@ -1,3 +1,7 @@
+.table-container {
+  padding-top: 40px;
+}
+
 table {
   border-collapse: collapse;
   margin: 40px auto;
@@ -30,6 +34,9 @@ tfoot th {
 
 @media (max-width: 500px) {
   table {
-    font-size: rem(16px);
+    font-size: rem(14px);
+  }
+  td {
+    padding: 4px;
   }
 }
